--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "flats-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -11,16 +12,22 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/react-slick": "^0.23.4",
     "@types/yandex-maps": "^2.1.11",
     "axios": "^0.20.0",
     "classnames": "^2.2.6",
+    "json-server": "^0.16.2",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "react-yandex-maps": "^4.4.0",
+    "react-slick": "^0.27.12",
+    "react-slidedown": "^2.4.5",
+    "react-yandex-maps": "^4.5.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "typescript": "^4.0.3"
@@ -29,7 +36,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "json-serv": "json-server --watch src/assets/db.json --port 3004"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -49,4 +57,5 @@
   "devDependencies": {
     "node-sass-chokidar": "^1.5.0"
   }
+  
 }
