--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.6",
     "@types/react-slick": "^0.23.4",
+    "@types/react-transition-group": "^4.4.0",
     "@types/yandex-maps": "^2.1.11",
     "axios": "^0.20.0",
     "classnames": "^2.2.6",
@@ -27,6 +28,7 @@
     "react-scripts": "3.4.3",
     "react-slick": "^0.27.12",
     "react-slidedown": "^2.4.5",
+    "react-transition-group": "^4.4.1",
     "react-yandex-maps": "^4.5.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
@@ -57,5 +59,4 @@
   "devDependencies": {
     "node-sass-chokidar": "^1.5.0"
   }
-  
 }
