--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/aos": "^3.0.3",
     "@types/classnames": "^2.2.10",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
@@ -17,6 +18,7 @@
     "@types/react-slick": "^0.23.4",
     "@types/react-transition-group": "^4.4.0",
     "@types/yandex-maps": "^2.1.11",
+    "aos": "^2.3.4",
     "axios": "^0.20.0",
     "classnames": "^2.2.6",
     "json-server": "^0.16.2",
