--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-router-dom": "^5.1.6",
     "@types/react-slick": "^0.23.4",
     "@types/react-transition-group": "^4.4.0",
+    "@types/react-youtube": "^7.6.2",
     "@types/yandex-maps": "^2.1.11",
     "aos": "^2.3.4",
     "axios": "^0.20.0",
@@ -32,6 +33,7 @@
     "react-slidedown": "^2.4.5",
     "react-transition-group": "^4.4.1",
     "react-yandex-maps": "^4.5.0",
+    "react-youtube": "^7.13.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "typescript": "^3.9.7"
