--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
+    "@types/react-datepicker": "^3.1.1",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.6",
@@ -22,9 +23,11 @@
     "aos": "^2.3.4",
     "axios": "^0.20.0",
     "classnames": "^2.2.6",
+    "date-fns": "^2.16.1",
     "json-server": "^0.16.2",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-datepicker": "^3.3.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
