--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.6",
+    "@types/react-scrollable-anchor": "^0.6.0",
     "@types/react-slick": "^0.23.4",
     "@types/react-transition-group": "^4.4.0",
     "@types/react-youtube": "^7.6.2",
@@ -27,6 +28,7 @@
     "json-server": "^0.16.2",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-datepicker": "^3.3.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
