--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-youtube": "^7.13.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "serve-favicon": "^2.5.0",
     "typescript": "^3.9.7"
   },
   "scripts": {
