--- a/package.json
+++ b/package.json
@@ -41,16 +41,17 @@
     "react-youtube": "^7.13.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "serve": "^11.3.2",
     "serve-favicon": "^2.5.0",
     "typescript": "^3.9.7"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "json-serv": "json-server --watch src/assets/db.json --port 3004",
-    "server": "node server.js"
+    "dev": "react-scripts start",
+"start": "serve -s build",
+"build": "react-scripts build",
+"test": "react-scripts test --env=jsdom",
+"eject": "react-scripts eject",
+"heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
