--- a/package.json
+++ b/package.json
@@ -46,12 +46,13 @@
     "typescript": "^3.9.7"
   },
   "scripts": {
-    "dev": "react-scripts start",
-"start": "serve -s build",
-"build": "react-scripts build",
-"test": "react-scripts test --env=jsdom",
-"eject": "react-scripts eject",
-"heroku-postbuild": "npm run build"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "json-serv": "json-server --watch src/assets/db.json --port 3004",
+    "server": "node server.js",
+    "heroku-postbuild ":"npm run build "
   },
   "eslintConfig": {
     "extends": "react-app"
