--- a/package.json
+++ b/package.json
@@ -46,14 +46,12 @@
     "typescript": "^3.9.7"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "start-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "json-serv": "json-server --watch src/assets/db.json --port 3004",
-    "server": "node server.js",
-    "heroku-postbuild ":"npm run build "
-  },
+    "test": "response-scripts test --env = jsdom ",
+    " eject ":"response- scripts eject ", "heroku-postbuild ":" npm run build "
+    },
   "eslintConfig": {
     "extends": "react-app"
   },
