--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
   },
   "scripts": {
     "dev": "start-scripts start",
+    "startReact": "react-scripts start",
+    "json-serv": "json-server --watch src/assets/db.json --port 3004",
     "start": "serve -s build",
     "build": "react-scripts build",
     "test": "response-scripts test --env = jsdom ",
