chore: add docker

--- a/package.json
+++ b/package.json
@@ -47,13 +47,14 @@
   },
   "scripts": {
     "dev": "start-scripts start",
-    "startReact": "react-scripts start",
+    "start-react": "react-scripts start",
     "json-serv": "json-server --watch src/assets/db.json --port 3004",
     "start": "serve -s build",
     "build": "react-scripts build",
     "test": "response-scripts test --env = jsdom",
-    " eject ":"response- scripts eject ", "heroku-postbuild ":" npm run build "
-    },
+    " eject ": "response- scripts eject ",
+    "heroku-postbuild ": " npm run build "
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
